updating readme for fraclac memory hint